Second try DZ commit